# ShipSimulator

./: README.md
shipsimulator-bl/: Cargo.toml
shipsimulator-bl/src/: lib.rs
shipsimulator-bl/src/admin/claims/: models.rs
shipsimulator-bl/src/authenticator/: mod.rs
shipsimulator-common/: Cargo.toml
shipsimulator-common/src/: lib.rs
shipsimulator-common/src/models/: mod.rs
shipsimulator-common/src/timechanger/: mod.rs
shipsimulator-common/src/validator/: mod.rs
shipsimulator-db/: .env  Cargo.toml
shipsimulator-db/migrations/2020-08-02-140907_create_users/: up.sql
shipsimulator-db/migrations/2020-08-05-185732_create_claims/: down.sql  up.sql
shipsimulator-db/src/: lib.rs  schema.rs
shipsimulator-db/src/admin/: query.rs
shipsimulator-db/src/authenticatie/: models.rs  query.rs
shipsimulator-db/src/db/: mod.rs  schema.rs
shipsimulator-server/: Cargo.toml
shipsimulator-server/src/: lib.rs  main.rs
shipsimulator-server/src/admin/: web.rs
shipsimulator-server/src/authentication/: loginmanager.rs  mod.rs  web.rs
shipsimulator-web/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
shipsimulator-web/e2e/src/: app.e2e-spec.ts
shipsimulator-web/src/: index.html
shipsimulator-web/src/app/: app.component.spec.ts  app.component.ts
