[package]
name = "shipsimulatorbl"
version = "0.1.0"
authors = ["Oscar Veldman <oveldman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
rand = "0.7.3"
sodiumoxide = "0.2.6"
shipsimulatorcommon = { path = "../shipsimulator-common"}
shipsimulatordb = { path = "../shipsimulator-db"}