[package]
name = "shipsimulatorcommon"
version = "0.1.0"
authors = ["Oscar Veldman <oveldman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
serde = { version = "1.0.115", features = ["derive"] }