[package]
name = "shipsimulatordb"
version = "0.1.0"
authors = ["Oscar Veldman <oveldman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
diesel = { version = "1.4.4", features = [ "chrono", "postgres"] }
dotenv = "0.15.0"
